src/burgermenu.scss
// vars
$menu-width: 273px !default;

body {
  overflow-x: hidden;
}

%burgermenu {
  width: $menu-width;
  position: absolute;
  top: 0;
  bottom: 0;
  height: 100%;
  z-index: 0;
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -webkit-transition: all 0.6s ease;
          transition: all 0.6s ease;
  .burgermenu-panel {
    position: absolute;
    overflow: hidden;
    overflow-x: hidden;
    overflow-y: auto;
    top: 0;
    bottom: 0;
    left: $menu-width;
    width: $menu-width;
    height: 100%;
    margin: 0;
    padding: 0;
    list-style: none;
    z-index: 2;
    background: #FFF;
    -webkit-overflow-scrolling: touch;
    -webkit-transition: all 0.6s ease;
            transition: all 0.6s ease;
    &.opened {
      -webkit-transform: translate3d(-$menu-width, 0, 0);
      transform: translate3d(-$menu-width, 0, 0);
      z-index: 5;
    }
    &:first-child {
      left: 0;
      width: 100%;
      z-index: 0;
      &.opened {
        -webkit-transform: translate3d(0, 0, 0);
        transform: translate3d(0, 0, 0);
      }
    }
  }
  .dropdown {
    .dropdown-children {
      display: none;
    }
  }
  a {
    display: block;
  }
  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }
}

.burgermenu-left {
  @extend %burgermenu;
  -webkit-transform: translate3d(-$menu-width, 0, 0);
          transform: translate3d(-$menu-width, 0, 0);
  left: 0;
}
.burgermenu-right {
  @extend %burgermenu;
  -webkit-transform: translate3d($menu-width, 0, 0);
          transform: translate3d($menu-width, 0, 0);
  right: 0;
}

.page-wrapper {
  position: relative;
  z-index: 10;
  width: 100%;
  min-width: 320px;
  -webkit-transition: all 0.6s ease;
          transition: all 0.6s ease;
}

#burgermenu-blocker {
  display: none;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999999;
}

.burgermenu-sticky-head {
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 11;
  -webkit-transition: all 0.6s ease;
          transition: all 0.6s ease;
}

.opened-left,
.opened-right {
  overflow: hidden;
  height: 100%;
  body {
    overflow: hidden;
  }
  .page-wrapper {
    min-height: 100vh;
    z-index: 0;
  }
  %burgermenu {
    z-index: 1;
  }
  #burgermenu-blocker {
    display: block;
  }
}
.opened-left {
  #burgermenu-blocker,
  .page-wrapper,
  .burgermenu-sticky-head {
    -webkit-transform: translate3d($menu-width, 0, 0);
            transform: translate3d($menu-width, 0, 0);
  }
  .burgermenu-left {
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
  }
}
.opened-right {
  #burgermenu-blocker,
  .page-wrapper,
  .burgermenu-sticky-head {
    -webkit-transform: translate3d(-$menu-width, 0, 0);
            transform: translate3d(-$menu-width, 0, 0);
  }
  .burgermenu-right {
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
  }
}

